# logparser

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
src/: Core.hpp  CoreFmt.hpp  CoreText.hpp  Time.hpp  main.cpp  test.cpp
src/util/: ScopeIncrementor.hpp  StringUtils.hpp
